<resources>
    <string name="app_name">CapstoneProjectPadiku</string>
    <string name="News">Artikel PadiKu</string>
    <string name="camera">Scan PadiKu</string>
    <string name="information">Informasi</string>
    <string name="setting">Pengaturan</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan Padi Kamu!</string>
    <string name="title_profile">News</string>
    <string name="news_page">Berita Hari Ini</string>
    <string name="time">Menunjukan Jam Posting</string>
    <string name="source_news">Sumber berita</string>
    <string name="tittle_news">Judul berita</string>
    <string name="date_news">tanggal berita dibuat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_camera">CameraActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="permission_deny_text">Required permissions denied. Exiting.</string>
    <string name="firstdescriptionIntroduction">Selamat datang di aplikasi Padi-Ku! Aplikasi deteksi dini penyakit daun pada padimu.</string>
    <string name="firstintroduction">Hi Farmers!</string>
    <string name="secondintroduction">Scan dengan mudah</string>
    <string name="thridtintroduction">Hasil akurat terpercaya</string>
    <string name="thirddescriptionintrodutrion">.. dan dapatkan diagnosa langsung jenis penyakit pada padimu!</string>
    <string name="padiku_header">Padi ku header</string>
    <string name="aboutus">About Us</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="close">Tutup</string>
    <string name="finish">Finish</string>
    <string name="padiku">PadiKu</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="deskripsibahasindo">Padi-Ku adalah aplikasi yang mudah digunakan untuk membantu orang (terutama petani) untuk mendeteksi hama seperti tungro, dll pada daun padi. Hal ini diharapkan agar dapat membantu petani untuk mengambil tindakan lebih lanjut seperti memberikan pengobatan dini untuk menghindari gagal panen.</string>
    <string name="seconddescriptionintrodutrion">Gunakan fitur \"Scan Padi-Ku\" untuk mengambil gambar penyakit pada daun padi hanya dengan kamera handphone mu ..</string>
    <string name="change_language_settings">Ganti Bahasa</string>
    <string name="tensorflow_lite_logo_description">TensorFlow Lite logo</string>
</resources>