<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:id="@+id/flameListNews">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageNews"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:riv_corner_radius="10dip"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/imageNews"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/source_news"
                android:textSize="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/tittle_news"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="10sp"
                android:text="@string/date_news"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="@color/design_default_color_primary_dark"/>

</FrameLayout>