<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-69dp">

        <ImageButton
            android:id="@+id/setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/primary"
            android:src="@drawable/translation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="PadiKu"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="48dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="20dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="20"
                app:iss_delay="0"
                app:iss_error_image="@color/purple_700"
                app:iss_period="3000"
                app:iss_placeholder="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="38dp" />

            <LinearLayout
                android:id="@+id/layoutDashboard"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/layoutCamera"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="200dp">

                <ImageButton
                    android:id="@+id/btnArticle"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/article" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/News"
                    android:textColor="@color/accent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCamera"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutDashboard"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="200dp">

                <ImageButton
                    android:id="@+id/btnCamera"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/scanpadi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="@color/accent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toStartOf="@+id/layoutCamera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutDashboard">

                <ImageButton
                    android:id="@+id/btnInfo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/ic_info" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/information"
                    android:textColor="@color/accent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSetting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutDashboard"
                app:layout_constraintTop_toBottomOf="@+id/layoutCamera">

                <ImageButton
                    android:id="@+id/btnAboutUs"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/aboutus" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tentang_kami"
                    android:textColor="@color/accent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>